Fixed uneven padding on the index page

--- a/css/flat.css
+++ b/css/flat.css
@@ -74,6 +74,7 @@ body{
 #home-intro-message{
 	background-color:#fff;
 	padding-top: 1%;
+	padding-bottom: 1%;
 }
 #home-intro-message h1{
 	font-size: 3em;
